[package]
name = "aibtc-rust"
version = "0.1.0"
edition = "2021"

[dependencies]
sha2 = "0.10"
secp256k1 = { version = "0.28", features = ["rand"] }
tiny-keccak = { version = "2.0", features = ["keccak"] }
hex = "0.4"
rand = "0.8"
num-bigint = "0.4"
reqwest = { version = "0.11", features = ["json"] }
num_cpus = "1.16"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
crossbeam-channel = "0.5"
tokio = { version = "1", features = ["full"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
